# AEFI_Acquisition

./: .gitignore  AGENTS.md  CLAUDE.md  conftest.py  create_desktop_shortcut.ps1  launch.bat  launch.ps1  launch.sh  packmind-lock.json  packmind.json  plot_h5_images.py  pyproject.toml  requirements.txt
.packmind/: commands-index.md  standards-index.md
AEFI_Acquisition/: .gitignore  README.md  main.py  main_exploratory.py  main_v2.py
AEFI_Acquisition_App/src/aefi_app/infrastructure/aefi_scan_engine/: Cargo.toml
AEFI_Acquisition_App/src/aefi_app/infrastructure/aefi_scan_engine/src/: arcus_driver.rs  lib.rs
Legacy_AEFI_Acquisition/: README_INSTALLATION.md  create_desktop_shortcut.bat  noteRedaction-rules.mdc  start_EFImagingBench.bat  test_rotation_module.py
_docs/: target_architecture.md
_legacy_AEFI_acquisition/: 20240210_convergenceStudy_data.csv  20250821_165251_convergence_study_erreurs.eps  20250821_165251_convergence_study_potentiels.eps  README.md  convergence_study_data.csv  convergence_study_plot.py  requirements.txt  setup.py  test_calibration.py
archives/: tests_e2e_analysis.md  tests_e2e_structure.md
data_repository/: 2025-12-11_210902_scan_stepScanResults.csv  2025-12-11_212126_scan_stepScanResults.csv  2025-12-11_212613_scan_stepScanResults.h5  2025-12-11_212732_scan_stepScanResults.csv  2025-12-12_045921_scan_stepScanResults.h5  2025-12-12_045934_scan_stepScanResults.h5  2025-12-17_163300_cylinder_pla_10kHz_liftoff_between_15mm_20_mm_stepScanResults.h5  2025-12-17_163630_cylinder_pla_10kHz_liftoff_between_15mm_20_mm_stepScanResults.h5  (+9 more)
(+1961 files in other folders)
