[package]
name = "aefi_scan_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aefi_scan_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
serialport = "4.2.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
